Started to add source code examples.
Based on the content of the EWDLite tutorial:

       http://gradvs1.mgateway.com/download/EWDLite.pdf

--- a/index.html
+++ b/index.html
@@ -63,6 +63,55 @@
         </section>
 
         <section>
+          <h2>Directories</h2>
+          <p>
+            We can start with the following directory structure
+          </p>
+          <pre><code data-trim contenteditable>
+/opt/
+/opt/ewdlite
+/opt/ewdlite/www
+/opt/ewdlite/www/ewd
+/opt/ewdlite/node_modules
+          </code></pre>
+        </section>
+
+        <section>
+          <h2>Client / Server</h2>
+          <p>
+            EWD applications are split into
+          </p>
+          <ul>
+            <li>Client
+            <li>Server
+          </ul>
+        </section>
+
+
+        <section>
+          <h2>Client</h2>
+          <p>The client code is HTML and Javascript.</p>
+          <p>It goes in the directory.</p>
+          <pre><code data-trim contenteditable>
+/opt/ewdlite/www/ewd
+          </code></pre>
+          <p>Under its own directory name, for example.</p>
+          <pre><code data-trim contenteditable>
+/opt/ewdlite/www/ewd/helloworld/
+          </code></pre>
+        </section>
+
+        <section>
+          <h2>Client</h2>
+          <p>Here is a helloworld example</p>
+          <p>of the Client HTML code.</p>
+          <a rel="index-01" href="source/ewdlite/www/ewd/helloworld01/index.html">HTML file</a>
+          <p>
+            Select the option "View Source" in your browser.
+          </p>
+        </section>
+
+        <section>
           <h3>Slide #1</h3>
         </section>
 
